Add --lto-O0 flag on Darwin.